# tp2_sol_so1

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
include/: commands.h  executions.h  monitor.h  shell.h
src/: commands.c  executions.c  main.c  monitor.c  shell  shell.c
tests/: CMakeLists.txt  test_internos.c
